2023-01-10  Oliver Kiddle  <opk@zsh.org>

	* 51292: Src/Zle/zle_utils.c: fix dynamic updates of
	region_highlight to account for PREDISPLAY

	* 51291: Doc/Zsh/zle.yo, Src/Zle/zle_refresh.c, Src/prompt.c:
	support for highlighting ellipses in the line editor

	* 51290: Src/Zle/zle_refresh.c: fix display of control
	characters with SINGLE_LINE_ZLE set

	* 51289: Src/Zle/zle_refresh.c, Src/prompt.c: don't disable
	non-colour attributes in prompts for SINGLE_LINE_ZLE and remove
	superfluous extra escapes to disable attributes

	* 51281: Src/Zle/zle_main.c, Src/Zle/zle_refresh.c, Src/zsh.h:
	keep track of attributes left on at the end of left and right
	prompts and reapply them explicitly as appropriate

	* 51280: Doc/Zsh/zle.yo, Src/Zle/zle_refresh.c, Src/init.c,
	Src/prompt.c, Src/zsh.h: add support for italic and faint
	fonts in the line editor

	* 51258, 51272: Src/Modules/watch.c, Src/Zle/complist.c,
	Src/Zle/zle.h, Src/Zle/zle_main.c, Src/Zle/zle_refresh.c,
	Src/Zle/zle_tricky.c, Src/Zle/zle_utils.c, Src/builtin.c,
	Src/init.c, Src/input.c, Src/loop.c, Src/prompt.c,
	Src/subst.c, Src/utils.c, Src/zsh.h, Test/D01prompt.ztst,
	Test/X04zlehighlight.ztst: refactor handling of terminal
	attributes, removing OFF flags in zattr

	* Nathan Houghton: 51276: Completion/Unix/Type/_diff_options:
	Fix diff completion for non GNU / FreeBSD platforms

2023-01-08  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* unposted: Src/Zle/zle_refresh.c: In a comment, replace a C
	variables glob pattern with its matches, for greppability.

2023-01-06  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* unposted (cf. users/28616):
	Completion/Unix/Command/_subversion: _svnadmin: Add comment
	noting a case that's not completed correctly.

2022-12-31  Oliver Kiddle  <opk@zsh.org>

	* Max Coplan: 51263: Doc/Zsh/files.yo: fix typo, an -> a

	* Shohei YOSHIDA: 51255: Completion/Unix/Command/_ruby:
	Update erb completion for version 4.0.2

	* Shohei YOSHIDA: 51254: Completion/Unix/Command/_ruby: